syntax = "proto3";
package headers;

option go_package = "github.com/enchant97/file-sync-protocol/prototypes/proto-1/pbtypes";

enum AckTypes {
  ACK_SYN = 0;
  ACK_REQ = 1;
  ACK_PSH = 2;
}

enum ReqTypes {
  PUSH_OBJ = 0;
  RESEND_CHUNK = 1;
}

message SynClient {
  uint64 id = 1;
  uint32 mtu = 2;
}

message AckServer {
  uint64 req_id = 1;
  AckTypes type = 2;
}

message ReqClient {
  uint64 id = 1;
  ReqTypes type = 2;
}

message ReqServer {
  uint64 req_id = 1;
  ReqTypes type = 2;
}

message PshClient {
  uint64 req_id = 1;
}

message FinClient {
  uint64 id = 1;
}
