syntax = "proto3";
package metadata;

option go_package = "github.com/enchant97/file-sync-protocol/prototypes/proto-1/pbtypes";

message AckSynServer {
  uint32 client_id = 1;
  uint32 payload_size = 2;
}

message ReqPushObjClient {
  string path = 1;
  uint64 size = 2;
}

message ReqChunkResend {
  uint64 req_id = 1;
  uint64 chunk_id = 2;
}
